syntax = "proto3";

package lock;

option go_package = "proto-gen/lock;lock";

import "google/protobuf/wrappers.proto";

service Lock {
    rpc Acquire (AcquireRequest) returns (AcquireReply);
    rpc Release (ReleaseRequest) returns (ReleaseReply);
    rpc Stop (StopRequest) returns (StopReply);
}

message AcquireRequest {
    string lockId = 1;
}

message AcquireReply {
    google.protobuf.BoolValue  result = 1;
}

message ReleaseRequest {
    string lockId = 1;
}

message ReleaseReply {
    google.protobuf.BoolValue  result = 1;
}

message StopRequest {}

message StopReply {
    google.protobuf.BoolValue  result = 1;
}

